test-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: test-svc
spec:
  type: ClusterIP
  selector:
    app: test
  ports:
    - protocol: TCP
      port: 5678
      targetPort: 5678
