test-tls-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: test-tls-ingress
  namespace: default
spec:
  tls:
  - hosts:
      - test.svc
    secretName: test-tls
  rules:
  - host: test.svc
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: test-svc
            port:
              number: 5678
